# pyqsl

./: .gitignore  CHANGELOG.rst  LICENCE  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
doc/: Makefile  make.bat
doc/source/: conf.py  conf.py~  index.rst  modules.rst  pyqsl.rst
examples/: cross_resonance.py  different_return_types.py  ramsey_experiment.py  task_that_returns_settings.py  test_labber.py  test_save_pickle.py  three_qubits.py  variable_range_sweep.py
pyqsl/: __init__.py  core.py
src/pyqsl/: __init__.py  common.py  core.py  many_to_many_relation.py  relation.py  settings.py  simulation_result.py
tests/: conftest.py  cross_resonance.py  ramsey_experiment.py  simple_sweep_test.py  test_common.py  test_core.py  test_labber.py  test_multidimensional_output.py  test_relations.py  test_running.py  test_settings.py  test_simulation_result.py  three_qubits.py
