[build-system]
requires = ["setuptools > 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqsl"
authors = [
    {name = "Antti Vepsäläinen"},
]
description = "A Framework for parametrized sweeps aimed for quantum simulations."
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
"Programming Language :: Python :: 3",
]
dependencies = [
"numpy",
"scipy",
"matplotlib",
"tqdm",
"numexpr",
"networkx",
"xarray",
"psutil",
"pint",
"pint-xarray",
]

#dynamic = ["version"]
version = "2.3"

[project.optional-dependencies]
testing = [
"pytest",
"tox",
"black",
"isort",
"sphinx",
]

examples = [
"qutip>4.0"
]

[project.urls]
url = 'https://github.com/ittnas/pyqsl'
download_url = 'https://github.com/ittnas/pyqsl/archive/2.0.tar.gz'

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
good-names="ii, jj, i, j, k, l, m, p, da, ds, f"
max-line-length=120
max-args=10
max-locals=25
disable = [
    "W0511",  # This is the message ID for TODO warnings
]
